[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyro_db"
version = "1.0.4"
description = "A fast, encrypted, file-based NoSQL database engine for Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["database", "nosql", "embedded", "encryption", "file-based"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Topic :: Database",
	"Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
encryption = ["cryptography>=41.0"]
dev = [
	"pytest>=8.0",
	"pytest-cov>=5.0",
	"cryptography>=41.0",
]

[project.urls]
Homepage = "https://github.com/Fidelissimus/pyro_db"
Issues   = "https://github.com/Fidelissimus/pyro_db/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyro_db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["pyro_db"]
omit   = ["tests/*", "examples/*"]
